fix(css): remove z-index from nav and footer

--- a/src/index.css
+++ b/src/index.css
@@ -158,7 +158,7 @@
 
   nav,
   footer {
-    @apply px-6 w-full flex justify-between items-center z-50;
+    @apply px-6 w-full flex justify-between items-center;
 
     .copyright {
       @apply text-sm text-neutral-500 mx-auto;
